Updated Open Graph image with local thumbnail

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph Meta Tags for Social Media Previews -->
   <meta property="og:title" content="Edidiong Aaron | Data Scientist & Flutter Developer Portfolio" />
   <meta property="og:description" content="A professional portfolio showcasing my expertise in data science, AI/ML engineering, and cross-platform application development with Flutter." />
-  <meta property="og:image" content="https://placehold.co/1200x630/282828/ffffff?text=Professional+Portfolio" />
+  <meta property="og:image" content="https://eddymontana.github.io/my-portfolio/thumbnail.png" />
   <meta property="og:url" content="https://eddymontana.github.io/my-portfolio/" />
   <meta property="og:type" content="website" />
 
@@ -23,3 +23,4 @@
   </noscript>
 </body>
 </html>
+
