--- a/index.html
+++ b/index.html
@@ -1,26 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <base href="/my-portfolio/">
-  <meta charset="UTF-8">
-  <title>Edidiong Aaron | Data Scientist & Flutter Developer Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Open Graph Meta Tags for Social Media Previews -->
-  <meta property="og:title" content="Edidiong Aaron | Data Scientist & Flutter Developer Portfolio" />
-  <meta property="og:description" content="A professional portfolio showcasing my expertise in data science, AI/ML engineering, and cross-platform application development with Flutter." />
-  <meta property="og:image" content="https://eddymontana.github.io/my-portfolio/thumbnail.png" />
-  <meta property="og:url" content="https://eddymontana.github.io/my-portfolio/" />
-  <meta property="og:type" content="website" />
-
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="main.dart.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edidiong Aaron | AI/ML Engineer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+    </style>
 </head>
-<body>
-  <noscript>
-    This page requires JavaScript to be enabled.
-    Please enable it and refresh the page.
-  </noscript>
+<body class="bg-gray-50 text-gray-800 antialiased">
+    <div class="container mx-auto p-8 max-w-4xl">
+        <header class="text-center mb-12">
+            <!-- Professional, friendly photo placeholder -->
+            <img class="mx-auto rounded-full w-32 h-32 object-cover border-4 border-white shadow-lg mb-4" src="https://placehold.co/400x400/2a3141/white?text=EA" alt="Profile Picture">
+            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-tight mb-2">Edidiong Aaron</h1>
+            <p class="text-lg text-gray-600">AI/ML Engineer & Data Scientist | Prompt Engineer | Flutter Dev</p>
+        </header>
+
+        <section id="about" class="mb-12">
+            <h2 class="text-3xl font-bold mb-4">About Me</h2>
+            <p class="text-gray-700 leading-relaxed">As a skilled Data Scientist and AI/ML Engineer, I have a passion for creating intelligent systems that solve real-world problems. My expertise includes Prompt Engineering, Flutter development, and workflow automation with Make.com.</p>
+        </section>
+
+        <section id="projects" class="mb-12">
+            <h2 class="text-3xl font-bold mb-4">Projects</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- Project 1 -->
+                <div class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
+                    <h3 class="text-xl font-semibold mb-2">AI-Powered Financial Optimizer</h3>
+                    <p class="text-gray-600 mb-4">A powerful tool that uses AI to analyze market data and optimize investment portfolios.</p>
+                    <a href="https://github.com/eddymontana/financial-optimizer" target="_blank" class="text-indigo-600 font-medium hover:underline">View Project &rarr;</a>
+                </div>
+                <!-- Project 2 -->
+                <div class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
+                    <h3 class="text-xl font-semibold mb-2">Intelligent Chatbot with Prompt Engineering</h3>
+                    <p class="text-gray-600 mb-4">A custom chatbot that leverages advanced prompt engineering to generate high-quality content and automate tasks.</p>
+                    <a href="https://github.com/eddymontana/intelligent-chatbot" target="_blank" class="text-indigo-600 font-medium hover:underline">View Project &rarr;</a>
+                </div>
+                <!-- Project 3 -->
+                <div class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
+                    <h3 class="text-xl font-semibold mb-2">Health Monitoring System</h3>
+                    <p class="text-gray-600 mb-4">A system that leverages sensor data and AI to provide real-time health insights and predictive alerts.</p>
+                    <a href="https://github.com/eddymontana/health-monitoring" target="_blank" class="text-indigo-600 font-medium hover:underline">View Project &rarr;</a>
+                </div>
+                <!-- Project 4 -->
+                <div class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
+                    <h3 class="text-xl font-semibold mb-2">AI Fashion Recommender</h3>
+                    <p class="text-gray-600 mb-4">An intelligent fashion recommender using cosine similarity to help users find their perfect style.</p>
+                    <a href="https://github.com/eddymontana/cosine-similarity" target="_blank" class="text-indigo-600 font-medium hover:underline">View Project &rarr;</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Corrected Contact Section -->
+        <section id="contact" class="text-center mt-12">
+            <h2 class="text-3xl font-bold mb-4">Get In Touch</h2>
+            <p class="text-gray-700 leading-relaxed mb-6">
+                I am actively seeking new freelance opportunities. Please reach out to me to discuss your project.
+            </p>
+            <!-- Email link with placeholder -->
+            <a href="mailto:your_email@example.com" class="inline-block bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg shadow-lg hover:bg-indigo-700 transition duration-300">Email Me</a>
+        </section>
+    </div>
 </body>
 </html>
+
 
